video added but need to make responsive brand section added nav tool is commited and slider text is edited

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 							<div class="item active">
 								<div class="col-sm-6">
 									<h1><span>E</span>-SHOPPER</h1>
-									<h2>Free E-Commerce Template</h2>
+									<h2>Appreal Dresses</h2>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 									<button type="button" class="btn btn-default get">Get it now</button>
 								</div>
@@ -175,7 +175,7 @@
 							<div class="item">
 								<div class="col-sm-6">
 									<h1><span>E</span>-SHOPPER</h1>
-									<h2>100% Responsive Design</h2>
+									<h2>Designer Dresses</h2>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 									<button type="button" class="btn btn-default get">Get it now</button>
 								</div>
@@ -188,7 +188,7 @@
 							<div class="item">
 								<div class="col-sm-6">
 									<h1><span>E</span>-SHOPPER</h1>
-									<h2>Free Ecommerce Template</h2>
+									<h2>Fashion Outlets</h2>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 									<button type="button" class="btn btn-default get">Get it now</button>
 								</div>
@@ -212,9 +212,23 @@
 			</div>
 		</div>
 	</section><!--/slider-->
-	
-	<!-- nav tabs -->
 
+	<section id="video-section">
+		<div class="container-fluid">
+<div class="container">
+		<div class="header-container">
+			<div class="video-container">
+				<video width="100%" id="video" autoplay loop>
+					<source src="images/cloth-2.mp4" type="video/mp4"> Your browser does not support the video tag.
+				</video>
+			</div>
+		</div>
+	</div>
+	</div>
+	</section>
+	 
+	<!-- nav tabs -->
+<!-- 
 	<div class="container">
 		<div class="tabbable col-sm-9">
 			<ul class="nav nav-tabs">
@@ -265,18 +279,13 @@
 			 </div>
 		</div>
 	</div>
-	
+	 -->
 	<!-- nav tabs end -->
 <!-- //////////////////////////////////////// -->
 	<!-- nav modal -->
 
-	<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary"  >
-		Launch demo modal
-	</button>
-	
 	<!-- Modal -->
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -294,7 +303,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- nav modal end -->
 
@@ -976,6 +985,67 @@
 						</div>
 					</div><!--/recommended_items-->
 					
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="cloth-brands">
+		<div class="container-fluid">
+			<div class="container">
+				<h3 class="page-header text-center">These are the Brands which is available to shop</h3>
+				<div class="row cloth-brand-align">
+					<div class="col-md-3">
+						<img src="images/brands/03_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+
+					<div class="col-md-3">
+						<img src="images/brands/04_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+
+					<div class="col-md-3">
+						<img src="images/brands/05_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+
+					<div class="col-md-3">
+						<img src="images/brands/07_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+				</div>
+
+				<div class="row cloth-brand-align">
+					<div class="col-md-3">
+						<img src="images/brands/09_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+
+					<div class="col-md-3">
+						<img src="images/brands/12_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+
+					<div class="col-md-3">
+						<img src="images/brands/14_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+
+					<div class="col-md-3">
+						<img src="images/brands/15_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+				</div>
+
+				<div class="row cloth-brand-align">
+					<div class="col-md-3">
+						<img src="images/brands/18_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+
+					<div class="col-md-3">
+						<img src="images/brands/19_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+
+					<div class="col-md-3">
+						<img src="images/brands/20_250x250.png" alt="..." class="img-thumbnail">
+					</div>
+
+					<div class="col-md-3">
+						<img src="images/brands/10_250x250.png" alt="..." class="img-thumbnail">
+					</div>
 				</div>
 			</div>
 		</div>
